# silabificador

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  TODO.md  brill_syllabifier.ipynb  pyproject.toml  setup.py  syllabifier_comparison.ipynb
.github/workflows/: build-tests.yml  coverage.yml  license_check.yml  publish_stable.yml  release_workflow.yml
benchmark/: __init__.py  gold.py  report.py  sample.py  stress_gold.py
docs/: advanced.md  api.md  quickstart.md
examples/: 01_basic.py  02_class_wrapper.py  03_digraphs.py  04_diphthong_hiatus.py  05_triphthong.py  06_batch_and_count.py  07_stress.py
silabificador/: __init__.py  graphemes.py  morphology.py  nucleus.py  parser.py  phonotactics.py  stress.py  syl.py  syllable.py  version.py
silabificador/models/: dli_bigram_syllabifier.pkl  dli_brill_syllabifier.pkl  dli_unigram_syllabifier.pkl  lbn_bigram_syllabifier.pkl  lbn_brill_syllabifier.pkl  lbn_unigram_syllabifier.pkl  lbx_bigram_syllabifier.pkl  lbx_brill_syllabifier.pkl  lbx_unigram_syllabifier.pkl  lda_bigram_syllabifier.pkl  lda_brill_syllabifier.pkl  lda_unigram_syllabifier.pkl  map_bigram_syllabifier.pkl  map_brill_syllabifier.pkl  map_unigram_syllabifier.pkl  mpx_bigram_syllabifier.pkl  mpx_brill_syllabifier.pkl  mpx_unigram_syllabifier.pkl  rjo_bigram_syllabifier.pkl  rjo_brill_syllabifier.pkl  rjo_unigram_syllabifier.pkl  rjx_bigram_syllabifier.pkl  train.py  (+8 more)
tests/: gold_sample.json  test_accuracy_regression.py  test_gold.py  test_graphemes.py  test_morphology.py  test_nucleus.py  test_parser.py  test_stress.py  test_syllabify.py
